[package]
name = "mkfs"
version = "0.1.0"
authors = ["KuangjuX <qcx@tju.edu.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# FAT32 = { path = "../FAT32" }
clap = "2.33.3"
lazy_static = { version = "1.4.0"}
spin = "0.7.0"
